--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -5,7 +5,12 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-color: var(--orange-great);
+  color: var(--papaya-whip);
+  font-size: 12rem;
 }
+
+
 
 .description {
   display: inherit;
