--- a/public/font/byp.css
+++ b/public/font/byp.css
@@ -5,3 +5,28 @@
     font-weight: 300;
     
 }
+
+@font-face {
+    font-family: 'Ubuntu-Bold';
+    src: url('Ubuntu-Bold.ttf') format('ttf'),
+        url('Ubuntu-Bold.ttf') format('truetype');
+    font-weight: 700;
+    
+}
+
+@font-face {
+    font-family: 'talldark';
+    src: url('talldark.ttf') format('ttf'),
+        url('talldark.ttf') format('truetype');
+    font-weight: 700;
+    
+}
+@font-face {
+    font-family: 'Subwich';
+    src: url('Subwich.otf') format('otf'),
+        url('Subwich.otf') format('opentype');
+    font-weight: 700;
+    
+}
+
+
