--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,234 +1,259 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-  background-color: var(--orange-great);
-  color: var(--papaya-whip);
-  font-size: 12rem;
+.menu{
+height: 50px;
+border-bottom: 1px solid var(--Eerie-Black);
+font-family: var(--font-family-2);
+color: var(--Eerie-Black);
+
 }
 
-
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
+.menu h1 {
+  color: var(--Eerie-Black);
   margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+padding: 0;
+  
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.Hero {
+  height: 200px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-size: var(--font-size-H);
+ font-family: var(--font-family-2);
+ margin: 0;
+}
+.Hero h1 {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 1%;
 }
 
-.grid {
+.gate{
+  height: 600px;
+  font-size: var(--font-size-H);
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+}
+
+.gate h2{
+  margin: 0;
+  padding: 0;
+  
+}
+
+.SmallFont{
+ font-family: var(--font-family-3);
+ font-size: var(--font-size-H);
+ background-color: var(--coquelicot);
+
+}
+.LargeFont{
+font-family: var(--font-family);
+ font-size: var(--font-size-MH);
+ background-color: var(--jonquil);
+}
+
+.headerNewsContainer {
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+  grid-template-columns:  1fr 1fr 1fr 1fr;
+  background-color: var(--coquelicot);
+ 
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.headerNewsContainerItem{
+  padding: 3%;
+  font-family: var(--font-family-2);
+  border-top: 1px solid var( --Eerie-Black);
+  border-bottom: 1px solid var( --Eerie-Black);
+  border-right: 1px solid var( --Eerie-Black);
+ display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
+.headerNewsContainerItem:last-child {
+  border-right: none; 
+  
+}
+.headerNewsContainerItem h2{
+  font-size: var(--font-size-SH);
+  margin:0 0 0 0;
+  
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
+.headerNewsContainerItem img {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+
+  filter: opacity(0.8);
+  width: 20px;
+  margin: 0 0 0 0;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.headerNewsContainerItem p {
+  margin: 0 0 0 0;
+  justify-items: center;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.SubHeader{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  font-size: var(--font-size-SH);
+  background-color: var(--Eerie-Black);
+  border: 1px solid  var(--Eerie-Black);
+  border-bottom: none;
+
+  color: var(--white-smoke);
+
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.SubHeader h1{
+  color: var(--white-smoke);
+  margin: 0;
+  padding: 0;
+  font-size: var(--font-size-H);
+  font-family: var(--font-family-3);
+  text-align: center;
+
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.SubHeader h3{
+  text-align: left;
+  color: var(--Eerie-Black);
+  font-size: var(--font-size);
+  
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.containerinfo{
+  display: grid;
+  grid-template-columns: 1fr 1fr   1fr;
+  grid-template-rows: 1fr 1fr ;
+  padding: 2px;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
+.info {
+  
+  display: block;
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+  font-size: var(--font-size-H);
+  border: 2px solid var(--Eerie-Black);
+ background-color: var(--white-smoke);
+ border-radius: 5%;
+ 
+ 
+ 
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.info h3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  color: var(--Eerie-Black);
+  font-family: var(--font-family-3);
+  font-size: var(--font-size-SH);
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.info h3:hover{
+  color: var(--white-smoke);
+  text-shadow: 3px 3px var(--Eerie-Black);
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.info img{
+width: 50px;
+  
 }
+
+.info:hover {
+  background-color: var(--jonquil);
+  border-width: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+
+.ContainerExitos{
+padding-top: 2%;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+.Exitos {
+border: 2px solid var(--white-smoke);
+background-color: var(--Eerie-Black);
+
+border-radius: 5%;
+color: var(--white-smoke);
+font-family: var(--font-family-4);
+text-align: center;
+list-style-type: none;
+
+}
+
+.Exitos:hover {
+  background-color: var(--coquelicot);
+  border: 2px solid var(--Eerie-Black);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.Exitos h2{
+  margin: 0;
+  padding: 0;
+}
+.Exitos h1{
+  border-bottom: 2px solid var(--white-smoke);
+ 
+  margin: 0;
+  padding: 0;
+}
+
+.Exitos ul{
+  list-style-type: none;
+  padding: 0;
+
+}
+
+.buyButtom {
+  font-family: var(--font-family-2);
+  font-size: var(--font-size-SH);
+  
+  color: var(--white-smoke);
+  width: fit-content;
+  text-decoration: none;
+  border-top: 2px solid var(--white-smoke);
+}
+
+
+.buyButtom:hover{
+  color: var(--Eerie-Black);
+  text-shadow: 2px 2px var(--white-smoke);
+}
+
+.etiquetas{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  font-size: var(--font-size);
+  justify-content: center;
+  align-items: center;
+}
+.etiquetas h1{
+  font-size: var(--font-size-MH);
+}
+
+
+
+
+
+
+
+
+
+
+
