--- a/public/font/byp.css
+++ b/public/font/byp.css
@@ -29,4 +29,20 @@
     
 }
 
+@font-face {
+    font-family: 'taller';
+    src: url('taller.ttf') format('ttf'),
+        url('taller.ttf') format('truetype');
+    font-weight: 700;
+    
+}
+
+@font-face {
+    font-family: 'TALLBOY';
+    src: url('TALLBOY.otf') format('otf'),
+        url('TALLBOY.otf') format('opentype');
+    font-weight: 700;
+    
+}
+
 
