--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,9 +56,28 @@ body {
 
 html {
   font-family: var(--font-family-4);
+
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
 }
 
+input,
+textarea,
+select {
+  outline: none;
+  font-size: calc(var(--font-size) *1.5); 
+  font-family: var(--font-family);
+  background-color: var(--Eerie-Black);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  width: 350px;
+  color: var(--white-smoke);
+  border: none;
+  border-bottom: 2px solid var(--jonquil);
+  opacity: 70%;
+}
 
 
