--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -340,9 +340,12 @@ padding: 0;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
   justify-items: center;
+  align-items: center;
+  height: 320px;
+
 }
 .tecno img{
-  width: 15%;
+  width: 20%;
   opacity: 80%;
 }
 
@@ -351,29 +354,40 @@ padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1%;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
 }
 
 .processItem{
   display: grid;
   grid-template-columns: 1fr 3fr;
+
   background-color: var(--Eerie-Black);
   border-radius: 20px;
   color: var(--white-smoke);
   height: fit-content;
   margin: 0;
   padding: 0;
-
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
 }
+
 
 .processItem h1{
   font-family: var(--font-family);
-  font-size: var(--font-size-H);
+  font-size: var(--font-size-MH);
   color: var(--jonquil);
+  margin: 0;
+  padding: 0;
 
 }
 
 .processItem p{
-  font-size: var(--font-family);
+  font-size: var(--font-family-2);
   
 }
 
@@ -407,6 +421,48 @@ font-size: calc(var(--font-size)* 1.5);
   height: 60%;
 }
 
+.portfolioIntem a {
+  color: var(--Eerie-Black);
+  font-size: var(--font-size);
+  font-family: var(--font-family-2);
+  border-bottom: 5px solid var(--jonquil);
+  
+}
+
+.portfolioIntem a:hover{
+  border-radius: 50%;
+  background-color: var(--jonquil);
+}
+
+.contact{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  background-color: var(--Eerie-Black);
+  color: var(--white-smoke);
+  height: fit-content;
+}
+
+.contactItem{
+  
+
+margin: 5%;
+}
+
+.contactItem h1{
+  font-family: var(--font-family-3);
+  font-size: var(--font-size-MH);
+ text-align: center;
+}
+
+.contactLabel{
+  font-size: var(--font-size-SH);
+  background-color: var(--Eerie-Black);
+   font-family: var(--font-family)
+
+}
 
 
+.contactForm > div:last-child {
+  width: 40%; 
+}
 
