--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@
   --font-size-MH: 7vw;
   --font-size-H: 5rem;
   --font-size-SH: 3rem; 
-  --font-size: 1rem;
+  --font-size: 1.3vw;
   --site-width: 1600px;
   --radius: 6px;
   --line-height: 1.7;
@@ -56,7 +56,6 @@ body {
 
 html {
   font-family: var(--font-family-4);
-
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
