--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,10 +13,10 @@
   --font-family-4: 'Subwich';
   --font-family-5: 'taller';
   --font-family-6: 'TALLBOY';
-  --font-size-HH: 25vh;
+  --font-size-HH: 25vw;
   --font-size-MH: 7vw;
-  --font-size-H: 5rem;
-  --font-size-SH: 3rem; 
+  --font-size-H: 5vw;
+  --font-size-SH: 3vw; 
   --font-size: 1.3vw;
   --site-width: 1600px;
   --radius: 6px;
