--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,35 +1,19 @@
 .menu{
-height: 50px;
-border-bottom: 1px solid var(--Eerie-Black);
-font-family: var(--font-family);
-color: var(--Eerie-Black);
+  height: 50px;
+  border-bottom: 1px solid var(--Eerie-Black);
+  font-family: var(--font-family);
+  color: var(--Eerie-Black);
 
 }
 
 .menu h1 {
-color: var(--Eerie-Black);
-margin: 0;
-padding: 0;
+  color: var(--Eerie-Black);
+  margin: 0;
+  padding: 0;
   
 }
 
-.Hero {
-  height: 200px;
- display: flex;
- justify-content: center;
- align-items: center;
- font-size: var(--font-size-H);
- font-family: var(--font-family-2);
- margin: 0;
-}
-.Hero h1 {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 1%;
-}
-
 .gate{
- 
   font-size: var(--font-size-MH);
   font-family: var(--font-family);
   display:flex;
@@ -38,8 +22,6 @@ padding: 0;
   text-align: center;
   margin: 0;
   padding: 0;
-  
-
 }
 
 
@@ -53,18 +35,35 @@ padding: 0;
   width: 100px;
 }
 
+.Hero {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--font-size-H);
+  font-family: var(--font-family-2);
+  margin: 0;
+}
+.Hero h1 {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 1%;
+}
+
+
+
 .SmallFont{
- font-family: var(--font-family-3);
- font-size: var(--font-size-MH);
- background-color: var(--coquelicot);
+  font-family: var(--font-family-3);
+  font-size: var(--font-size-MH);
+  background-color: var(--coquelicot);
  
 
 }
 .LargeFont{
-font-family: var(--font-family-3);
- font-size: var(--font-size-MH);
- background-color: var(--jonquil);
- border-radius: 50%;
+  font-family: var(--font-family-3);
+  font-size: var(--font-size-MH);
+  background-color: var(--jonquil);
+  border-radius: 50%;
 }
 
 .headerNewsContainer {
@@ -157,9 +156,9 @@ font-family: var(--font-family-3);
 .info {
   display: block;
   border: 2px solid var(--Eerie-Black);
- background-color: var(--white-smoke);
- border-radius: 5%;
- padding: 1%;
+  background-color: var(--white-smoke);
+  border-radius: 5%;
+  padding: 1%;
 }
 .info p{
   font-size: var(--font-size);
@@ -168,7 +167,6 @@ font-family: var(--font-family-3);
 }
 
 .info h3{
- 
   margin: 0;
   padding: 1%;
   color: var(--Eerie-Black);
@@ -182,10 +180,10 @@ font-family: var(--font-family-3);
 }
 
 .info img{
-width: 30px;
- display: grid;
- justify-content: center;
- align-items: center;
+  width: 30px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 
 .info:hover {
@@ -202,22 +200,20 @@ width: 30px;
 }
 
 .ContainerExitos{
-
-display: grid;
-grid-template-columns: 1fr 1fr 1fr;
-margin-bottom: 15%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 15%;
 
 }
 
 .Exitos {
-border: 2px solid var(--white-smoke);
-background-color: var(--Eerie-Black);
-
-border-radius: 5%;
-color: var(--white-smoke);
-font-family: var(--font-family-4);
-text-align: center;
-list-style-type: none;
+  border: 2px solid var(--white-smoke);
+  background-color: var(--Eerie-Black);
+  border-radius: 5%;
+  color: var(--white-smoke);
+  font-family: var(--font-family-4);
+  text-align: center;
+  list-style-type: none;
 
 }
 
@@ -297,7 +293,7 @@ padding: 0;
 
 .sectionAbout{
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 3fr 1fr;
   background-color: var(--jonquil);
   border-radius: 50%;
   justify-content: center;
@@ -357,7 +353,7 @@ padding: 0;
 .process{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1%;
+  gap: 0.5%;
   justify-content: center;
   align-content: center;
   justify-items: center;
@@ -368,17 +364,17 @@ padding: 0;
 .processItem{
   display: grid;
   grid-template-columns: 1fr 3fr;
-
   background-color: var(--Eerie-Black);
   border-radius: 20px;
   color: var(--white-smoke);
   height: fit-content;
-  margin: 0;
+  margin: 0  0  1% 0;
   padding: 0;
   justify-content: center;
   align-content: center;
   justify-items: center;
   align-items: center;
+  
 }
 
 
@@ -398,7 +394,7 @@ padding: 0;
 
 .portfolio{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr  1fr ;
+  grid-template-columns: 1fr 1fr 1fr  ;
   gap: 5px;
   margin-bottom: 15%;
  
@@ -424,7 +420,7 @@ font-size: calc(var(--font-size)* 1.5);
 
 .portfolioIntem img{
   width: 100%;
-  height: 60%;
+  height: 80%;
 }
 
 .portfolioIntem a {
@@ -474,3 +470,70 @@ margin: 5%;
 
 /* responsive*/
 
+@media screen and (max-width: 1200px) {
+  .gate{
+  font-size: 
+  calc(var(--font-size-MH) / 1.1);
+  }
+
+}
+
+@media screen and (max-width: 1024px) {
+
+  .sectionAbout{
+  grid-template-columns: 3fr 1fr;
+
+  }
+
+  .sectionAbout p{
+    width: 100%;
+  }
+
+  .sectionAbout img{
+
+    height: 80%;
+  }
+
+  .processItem{
+    height: 100%;
+
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+  .menu{
+    height: 20px;
+  }
+
+  .gate{
+    font-size: 
+    calc(var(--font-size-MH) / 1.2);
+  }
+
+  .SubHeader{
+    display: inline-block;
+  }
+
+  .SubHeader br{
+    display: none;
+  }
+
+  .SubHeader h1{
+    font-size:calc( var(--font-size-SH) / 0.5);
+  }
+
+
+  .sectionAbout{
+    height: fit-content;
+    grid-template-columns: 1fr 1fr;
+  
+    }
+  .sectionAbout img{
+
+    height: 50%;
+  }
+
+
+
+}
