--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,3 +90,33 @@ select {
 
 
 }
+
+
+
+/* animation */
+.blink1 {
+	-webkit-animation: blink1 0.6s forwards;
+	        animation: blink1 0.6s forwards;
+}
+@-webkit-keyframes blink1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+@keyframes blink1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
